LIST OF CHANGES FOR NPG-QC PACKAGE

release 66.0
 - GUI for utility QC (inactive)
 - add new bcfstats qc check + viewer change
 - skip incomplete tag zero results in genotype_call POSTing to LIMs
 - minor changes to genotype qc check to support checking against externally
   supplied genotypes instead if they exist
 - handle target samtools stats file - parsing, archiving and viewing.
 - queries to qc_store should always have support for tracking db look-up
 - methods for loading autoqc results moved from npg_qc::autoqc::collection
   to npg_qc::autoqc::qc_store
 - little-used method load_run of npg_qc::autoqc::qc_store class, which did
   not support propagation of tracking db handle, is removed
 - unused public methods in npg_qc::autoqc namespace removed
 - mqc outcomes API - a new method, get_library_outcomes, for retrieving
   library qc outcomes as boolean values
 - deciding whether the entity is subject to manual QC:
     remove special provisions for GCLP;
     enforce that libraries and lanes cannot be qc-ed on the same page
 - enable saving qc outcomes for multi-component compositions
 - SeqQC GUI changes for multi-component compositions:
     enable display of autoqc results;
     enable manual QC
 - changes to allow for SeqQC display of results corresponding to multi-
   component compositions
 - Illumina QC data loader restricted to loading cluster density data, its
    data pre-loading functionality dropped
 - amend spatial_filter check to take a directory name to search instead
    of an explicit list of input files (that approach became unworkable
    with highly plexed lanes)
 - add result_file_path attribute to file-based result objects
 - samtools stats file parser
 - qX_yield and gc_fraction autoqc checks to use samtools stats files
   instead of fastqcheck file
 - SeqQC:
     links for latest ivc and analysis removed since the target files are
       no longer produced;
     link for full rna seqc analysis follows info in the result object